[package]
name = "notiflut_ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
thiserror = "1.0.40"
anyhow = "1"
clap = {version = "4.2.1", features=["cargo", "derive"]}
