[package]
# Do not change the name of this crate.
name = "hub"
version = "1.0.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "4.16.3"
tokio_with_wasm = "0.3.2"
wasm-bindgen = "0.2.87"
prost = "0.12.1"
prost-types = "0.12.1"
notification_server = { path = "../notification_server" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
