[package]
name = "notification_server"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
toml = "0.8.8"
once_cell = "1.17.1"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
dbus-tokio = "0.7.6"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
chrono = "^0.4.24"
freedesktop-icons = "0.2.3"
freedesktop-desktop-entry = "0.5.0"
anyhow = "1"
thiserror = "1.0.40"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb", "kv-mem"] }
serde = { version = "1.0.188", features = ["derive"] }
xdg = "2.5.2"
tracing = "0.1.40"
cacache = "12.0.0"
nanoid = "0.4.0"
const_format = "0.2.32"
